--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,35 @@
 <html>
 
 <head>
-    <!-- meta -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Wikipedia WOO</title>
-    <!-- files -->
-    <link rel="stylesheet" href="./main.css" />
+  <!-- meta -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Node Girls Blog</title>
+  <!-- files -->
+  <link rel="stylesheet" href="./main.css" />
 </head>
 
 <body>
+  <header>
+    <h1>Node Girls</h1>
+  </header>
 
+  <!-- input box -->
+  <section>
+    <form>
+      <h2>Enter A Blog Post</h2>
+      <textarea class="form-text" rows="5" cols="50"></textarea>
+      <button class="form-submit" id="form-submit-button" type="submit">Add Post</button>
+    </form>
+  </section>
 
-    <!-- scripts -->
-    <script src="./index.js" type="text/javascript"></script>
+  <!-- blog posts -->
+  <section id="blog-container">
+
+  </section>
+
+  <!-- scripts -->
+  <script src="./index.js" type="text/javascript"></script>
 </body>
 
 </html>
